fixed side navbar so on mobile the top navbar does not block side navbar

--- a/static/css/mcmun.less
+++ b/static/css/mcmun.less
@@ -36,11 +36,6 @@ body {
 	margin-top: 60px;
 }
 
-@media screen and (max-width: 850px) {
-    #header {
-        display: none !important;
-    }
-}
 
 #masthead {
 	position: relative;
@@ -460,5 +455,22 @@ body {
 
 .firstrow { 
 	background-color: #dddddd;
+}
+
+
+@media screen and (max-width: 850px) {
+    #header {
+        display: none !important;
+    }
+    .wrapper {
+	padding-top: 50px !important;
+    }
+    .wrapper-no-video {
+        padding-top: 50px !important;
+    }
+
+    #content {
+	padding-top: 0px;
+    }
 }
 
