--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -168,7 +168,7 @@
 }
 /* First level of nav */
  .bs-sidenav {
-    margin-top: 30px;
+    margin-top: 80px;
     margin-bottom: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
